workloads/simpsons/netpol/allow-from-bouvier-to-marge.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-from-bouvier-to-marge
spec:
  podSelector:
    matchLabels:
      app: marge
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: bouvier
  policyTypes:
    - Ingress
