workloads/simpsons/netpol/allow-from-simpson-to-simpson.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-from-simpsons-to-simpsons
spec:
  podSelector: {}
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name=simpson
  policyTypes:
    - Ingress
